fix cqrs pattern - add query handler - add caching genericly using jedis
