# src/main/kotlin/ir/irancell/interfaces/dto/UserDTO.kt
@@ -3,7 +3,7 @@ package ir.irancell.interfaces.dto
 import kotlinx.serialization.Serializable
 
 @Serializable
-data class UserRequestDTO(
+data class UserDTO(
     val name: String,
     val age: Int
 )
